@@ -1,3 +1,8 @@
+2006-01-19  Wim Taymans  <wim@fluendo.com>
+
+	* src/com/fluendo/player/Cortado.java: (Cortado.paint):
+	Don't try to render with bogus width/height values.
+
 2006-01-19  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* README:
